fixed scuffed scrollbar on dropdowns filterwindow

--- a/react_app/src/components/filter/currentfiltering.css
+++ b/react_app/src/components/filter/currentfiltering.css
@@ -1,18 +1,18 @@
 .current-filter {
-    position: absolute;
-    overflow-y: auto;
-    overflow-x: hidden;
-    top: 55px;
-    right: 0;
-    min-width: 150px;
-    max-height: 40px;
-    background-color: var(--mainDark);
-    border-radius: 0 0 0 0.5em;
-    z-index: 1;
+  position: absolute;
+  overflow-y: auto;
+  overflow-x: hidden;
+  top: 55px;
+  right: 0;
+  width: 230px;
+  max-height: 40px;
+  background-color: var(--mainDark);
+  border-radius: 0 0 0 0.5em;
+  z-index: 1;
 }
 .text {
-    color: white;
-    margin: 0 20px 0 10px;
-    overflow-x: hidden;
-    white-space: nowrap;
+  color: white;
+  margin: 0 20px 0 10px;
+  overflow-x: hidden;
+  white-space: nowrap;
 }
