--- a/react_app/src/components/leaderboard/leaderboard.css
+++ b/react_app/src/components/leaderboard/leaderboard.css
@@ -7,7 +7,7 @@
   max-height: 300px;
   background-color: var(--mainDark);
   border-radius: 0 0 0 1em;
-  z-index: 2;
+  z-index: 999;
 }
 h2 {
   position: sticky;
